Improved read_only recognition on strings. If there is a field like price and price_options and one makes price_options read_only, price is not longer read only, too. The read_only options list is now delimited by a , or one or more spaces (/\s+/).

--- a/app/views/admin/templates/_string.html.erb
+++ b/app/views/admin/templates/_string.html.erb
@@ -1,7 +1,7 @@
 <%
 
   # Read only fields.
-  if @resource.typus_field_options_for(:read_only).to_s.include?(attribute)
+  if @resource.typus_field_options_for(:read_only).to_s.split(/[,\s+]/).include?(attribute)
     custom = { :readonly => 'readonly' }
     label_text << " <small>#{_t("Read only")}</small>"
   end
